--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node test.js",
-    "build-prod": "parcel build src/index.html"
+    "build": "build server.js"
   },
   "repository": {
     "type": "git",
