--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cli": "^1.0.1",
     "express": "^5.1.0",
     "firebase": "^11.8.1",
+    "firebase-tools": "^14.4.0",
     "jest": "^29.7.0",
     "supertest": "^7.1.1"
   }
